--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
          
 
-        <h1>Haz click para ingresar a mi canal </h1> 
+        <h1>Pobre Gastón, no te da culpa? Ahora por forro te suscrbís a </h1> 
         <h2>
 
-         <a href=https://www.youtube.com/@elnakah target="_blank">suscribite a mi canal</a>
+         <a href=https://www.youtube.com/@elnakah target="_blank">mi canal</a>
         </h2>
 
     
