--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
          
- <h1>Pobre Gastón, no te da culpa? Ahora por <br>
-    forro te suscrbís a 
+ <h1>EEEEPA ANDAMOS DE CHUSMA??? Ahora por chismosx te suscribís a mi canal <br>
+
             <a  href=https://www.youtube.com/@elnakah target="_blank">mi canal</a>   
         </h1> 
        
