--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
          
- <h1>EEEEPA ANDAMOS DE CHUSMA??? Ahora por chismosx te suscribís a mi canal <br>
+ <h1>EEEEPA ANDAMOS DE CHUSMA??? Ahora por chismosx te suscribís a <br>
 
             <a  href=https://www.youtube.com/@elnakah target="_blank">mi canal</a>   
         </h1> 
